# snake-game

./: .gitignore  CODEMAP.md  QUICK_GUIDE.md  README.md  coverage.json  pyproject.toml  requirements-dev.txt  requirements.txt
src/: main.py
src/config/: colors.py  settings.py
src/engine/: collision.py  game_loop.py  input_handler.py
src/models/: direction.py  food.py  game_state.py  position.py  snake.py
src/renderer/: renderer.py
tests/integration/: test_game_flow.py
tests/unit/: test_main.py
tests/unit/test_config/: test_settings.py
tests/unit/test_engine/: test_collision.py  test_game_loop.py  test_game_loop_run.py  test_input_handler.py
tests/unit/test_models/: test_direction.py  test_food.py  test_food_edge_cases.py  test_game_state.py  test_position.py  test_snake.py
tests/unit/test_renderer/: test_renderer.py  test_renderer_fonts.py
