[project]
name = "snake-game"
version = "1.0.0"
description = "A classic Snake game implemented in Python with Pygame"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pygame==2.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "black==24.8.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
